Updated libs versions

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "dev:start-simple": "nodemon -e \"js json graphql\" node src/server.js",
     "dev:start-app": "npm run dev:prisma-deploy && node src/cluster.js",
-    "prisma-export": "cd src/database && mkdir -p ../../prisma/ && prisma export -e ../../.env -p ../../prisma/export_import.zip",
-    "prisma-import": "cd src/database && prisma import -e ../../.env -d ../../prisma/export_import.zip",
-    "dev:prisma-deploy": "npm run dev:generate-docs && cd src/database && prisma deploy -e ../../.env && prisma generate -e ../../.env",
-    "dev:prisma-deploy-f": "npm run dev:generate-docs && cd src/database && prisma deploy -f -e ../../.env && prisma generate -e ../../.env",
-    "dev:prisma-reset": "cd src/database && prisma reset -e ../../.env",
-    "dev:prisma-seed": "cd src/database && prisma seed -r -e ../../.env",
+    "prisma-export": "cd src/database && mkdir -p ../../prisma/ && npx prisma export -e ../../.env -p ../../prisma/export_import.zip",
+    "prisma-import": "cd src/database && npx prisma import -e ../../.env -d ../../prisma/export_import.zip",
+    "dev:prisma-deploy": "npm run dev:generate-docs && cd src/database && npx prisma deploy -e ../../.env && npx prisma generate -e ../../.env",
+    "dev:prisma-deploy-f": "npm run dev:generate-docs && cd src/database && npx prisma deploy -f -e ../../.env && npx prisma generate -e ../../.env",
+    "dev:prisma-reset": "cd src/database && npx prisma reset -e ../../.env",
+    "dev:prisma-seed": "cd src/database && npx prisma seed -r -e ../../.env",
     "dev:clear": "npm run clear && docker-compose -f docker-compose-dev.yml rm -f",
     "dev:start": "docker-compose -f docker-compose-dev.yml up -d",
     "dev:stop": "docker-compose -f docker-compose-dev.yml stop",
@@ -20,7 +20,7 @@
     "clear": "sudo rm -rf ./data ./uploads ./logs ./config ./prisma",
     "prod:build": "docker-compose build",
     "prod:init": "mkdir -p data/config && cp src/config/config_example.js data/config/config.js && cp .env_example .env",
-    "prod:start-app": "cd src/database && npx prisma deploy && cd .. && node cluster.js",
+    "prod:start-app": "cd src/database && npx npx prisma deploy && cd .. && node cluster.js",
     "prod:up": "docker-compose up -d",
     "prod:start": "docker-compose start",
     "prod:full-restart": "npm run prod:stop && npm run prod:clear && npm run prod:build && npm run prod:up",
@@ -40,9 +40,9 @@
     "express-rate-limit": "^3.3.2",
     "graphql-cost-analysis": "^1.0.3",
     "graphql-import": "^0.7.1",
-    "graphql-shield": "^5.1.1",
+    "graphql-shield": "^5.1.2",
     "graphql-tools": "^4.0.4",
-    "graphql-yoga": "^1.17.2",
+    "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "log4js": "^4.0.2",
@@ -52,7 +52,7 @@
     "node-fetch": "^2.3.0",
     "nodemailer": "^5.1.1",
     "pg": "^7.8.0",
-    "prisma-client-lib": "^1.25.7",
+    "prisma-client-lib": "^1.26.4",
     "pug": "^2.0.3",
     "rate-limit-redis": "^1.6.0",
     "redis": "^2.8.0",
@@ -65,9 +65,9 @@
     "graphql": "^14.0.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
+    "nodemon": "^1.18.10",
     "npm-check-updates": "^2.15.0",
-    "prisma": "^1.25.7",
+    "prisma": "^1.26.4",
     "redoc-cli": "^0.7.0"
   }
 }
