--- a/src/database/prisma.yml
+++ b/src/database/prisma.yml
@@ -12,4 +12,4 @@ generate:
 # If specified, the `secret` must be used to generate a JWT which is attached
 # to the `Authorization` header of HTTP requests made against the Prisma API.
 # Info: https://www.prisma.io/docs/reference/prisma-api/concepts-utee3eiquo#authentication
-# secret: mysecret123
+# secret: ${env:PRISMA_API_SECRET}
