--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "apollo-link-http": "^1.5.12",
     "argon2": "^0.21.0",
     "compression": "^1.7.3",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-rate-limit": "^3.4.0",
     "graphql-cost-analysis": "^1.0.3",
