--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "apollo-link-http": "^1.5.14",
     "argon2": "^0.21.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-basic-auth": "^1.1.6",
