--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "graphql-tools": "^4.0.4",
     "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "^8.5.1",
+    "likelogserver": "^0.0.4",
     "lodash": "^4.17.11",
     "log4js": "^4.1.0",
     "mocha": "^6.1.4",
@@ -57,8 +58,8 @@
     "node-fetch": "^2.4.1",
     "nodemailer": "^6.1.1",
     "pg": "^7.10.0",
-    "prisma": "^1.31.1",
-    "prisma-client-lib": "^1.31.1",
+    "prisma": "^1.31.2",
+    "prisma-client-lib": "^1.31.2",
     "pug": "^2.0.3",
     "rate-limit-redis": "^1.6.0",
     "redis": "^2.8.0",
