--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "graphql-shield": "^5.3.5",
     "graphql-tools": "^4.0.4",
     "graphql-yoga": "^1.17.4",
+    "helmet": "^3.17.0",
     "jsonwebtoken": "^8.5.1",
     "likelogserver": "^0.0.4",
     "lodash": "^4.17.11",
